removed unecessary css files

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,8 +7,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{% block title %}{% endblock %}</title>
-<link rel='stylesheet' href="{% static "css/woocommerce-layout.css"%}" type='text/css' media='all'/>
-<link rel='stylesheet' href="{% static "css/woocommerce-smallscreen.css"%}" type='text/css' media='only screen and (max-width: 768px)'/>
+{% comment %} <link rel='stylesheet' href="{% static "css/woocommerce-layout.css"%}" type='text/css' media='all'/>
+<link rel='stylesheet' href="{% static "css/woocommerce-smallscreen.css"%}" type='text/css' media='only screen and (max-width: 768px)'/> {% endcomment %}
 <link rel='stylesheet' href="{% static "css/style.css"%}" type="text/css" media='all'/>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Oswald:400,500,700%7CRoboto:400,500,700%7CHerr+Von+Muellerhoff:400,500,700%7CQuattrocento+Sans:400,500,700' type='text/css' media='all'/>
 <link rel='stylesheet' href="{% static "css/easy-responsive-shortcodes.css"%}" type='text/css' media='all'/>
