--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -65,7 +65,8 @@
 </ul>
 </div>
 {% if new_comment %}
-  <h2>Your comment has been added.</h2>
+<div class="alert">Your comment has been added<a onclick="closeAlert()">x</a></div>
+
 {% endif %}
   <h2>Add a new comment</h2>
       <div class="form">
