--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -34,6 +34,7 @@
 		</nav>
 		</header>
 		<!-- #masthead -->
+
 		<div id="content" class="site-content">
                     {% block content %}
                     {% endblock %}
@@ -55,6 +56,7 @@
 </div>
 <!-- #page -->
 <script src="{% static "js/jquery.js"%}"></script>
+<script src="{% static "js/closeAlert.js"%}"></script>
 <script src="{% static "js/plugins.js"%}"   ></script>
 <script src="{% static "js/scripts.js"%}"   ></script>
 <script src="{% static "js/masonry.pkgd.min.js"%}"></script>
