--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -13,7 +13,7 @@
         <article class="hentry">
             <header class="entry-header">
             <div class="entry-thumbnail">
-            <a href="{{post.get_absolute_url}}"><img src="{{post.cover_photo}}" alt="p1"/></a>
+            <a href="{{post.get_absolute_url}}"><img src="{{post.cover_photo}}" class="list-img" alt="cover photo"/></a>
                 </div>
                     <h2 class="entry-title"><a href="{{post.get_absolute_url}}" rel="bookmark">{{post.title}}</a></h2>
                     {% for tag in post.tags.all %}
